--- a/.github/workflows/example.yaml
+++ b/.github/workflows/example.yaml
@@ -11,6 +11,6 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
       - name: Run action
-        uses: ShookTea/JunitCloverReporter
+        uses: ShookTea/JunitCloverReporter@v0.1.0
         with:
           github_token: example
